add: gas tracking feature
